# pechakucha-gen

./: Cargo.toml  README.md
src/: html_ast_generator.rs  lib.rs  main.rs  pechakucha_template.html.template
